Wed, 22 Nov 2006 16:13:33 +0100 <thp@perli.net>
        * src/gpodder/libpodcasts.py: Small bugfix for description in 
          podcast item (80 instead of 20 chars is what we want ;)

Mon, 20 Nov 2006 13:33:00 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Fixed a stupid bug that prevented you 
          from changing a channel's url in the channel editor (didn't 
          anyone notice this bug before? ;)

Mon, 20 Nov 2006 12:46:54 +0100 <thp@perli.net>
        * src/gpodder/libpodcasts.py: Added one_line_description() to 
          podcastItem; modified getItemsModel to return description
        * src/gpodder/gpodder.py: Added description to "available 
          episodes" list; made columns resizable and reorderable and 
          added "ellipsize" property to both name and description field
	* bin/gpodder: bumped release date again (wonder if we should 
	  use svn:keywords on that file some time soon ;)

Mon, 20 Nov 2006 11:58:37 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Applied patch from Nick (nikosapi 
          gmail com) to add file size to iTunesDB. This should fix the 
          constant disk spinning on 5G iPods. Thanks :)

Sat, 18 Nov 2006 11:41:16 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Applied modified patch from (nikosapi
          gmail com) to add "blue bullet" and "remember playback position" 
	  for fifth generation iPods when syncing to Podcasts playlist

Fri, 17 Nov 2006 21:42:18 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Clear list of downloaded items after
          deleting the last channel (thanks to Alain Tauch for reporting)

Fri, 17 Nov 2006 11:10:42 +0100 <thp@perli.net>
        * src/gpodder/liblogger.py: Added new logging facility
        * src/gpodder/libgpodder.py: Removed isDebugging() and debug flag
        * src/gpodder/*: Use new liblogger instead of isDebugging() in
          libwget.py, liblocdbreader.py, libplayers.py, libpodcasts.py,