@@ -66,7 +66,9 @@
  If you want to have iPod synchronization support, you will also 
  have to install the following OPTIONAL packages:
 
-   * python-eyed3 (eyeD3 Python bindings)
+   * One of the following metadata libraries:
+     * python-pymad (preferred; MAD MP3 decoder Python bindings)
+     * python-eyed3 (alternative to pymad; eyeD3 Python bindings)
    * python-gpod (libgpod's Python bindings)
 
  Other users: Please install the above packages somehow ;)
