@@ -7,10 +7,11 @@ This file sums up the current status of iPod sync support.
 Added libipodsync.py that depends on two new libraries: eyeD3 and gpod.
 
 gPodder_iPodSync support should be OPTIONAL, and gPodder should work without 
-gpod and eyeD3 installed (but disable iPod sync - related functions).
+gpod and pymad (or eyed3) installed (but disable iPod sync - related functions).
 
 
       -- Thomas Perl <thp@perli.net>, Thu, 06 Apr 2006 15:54:22 +0200
+      Update: Wed, 22 Nov 2006 17:01:23 +0100 (pymad is now preferred)
 
 
 
@@ -33,13 +34,23 @@ gpod and eyeD3 installed (but disable iPod sync - related functions).
  package.
 
 
-*** eyeD3 + python bindings ***
+*** pymad ***
+
+-> pymad is now preferred over eyed3, because it detects the mp3 length 
+   better than eyed3 (at least for me).
+
+Install it using:
+
+   apt-get install python-pymad
+
+If you don't have pymad available or if you somehow can't use it, you can 
+still install eyeD3 - it will be used if gpodder doesn't find pymad.
+
+
+*** eyeD3 + python bindings (ONLY IF PYMAD IS NOT AVAILABLE) ***
 
  This is rather simple to install:
 
     apt-get install python-eyed3
- 
- This dependency is only added because we need to get the track length in 
- milliseconds of a mp3 file when syncing to iPod.
 
 
